Add advanced filters: type filter and sort options

--- a/index.html
+++ b/index.html
@@ -92,6 +92,52 @@
             transform: translateY(-2px);
         }
 
+        .filters-bar {
+            display: flex;
+            gap: 15px;
+            margin-bottom: 20px;
+            animation: fadeIn 1s ease;
+            flex-wrap: wrap;
+            align-items: center;
+        }
+
+        .filter-group {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            background: rgba(255,255,255,0.2);
+            backdrop-filter: blur(10px);
+            padding: 10px 20px;
+            border-radius: 12px;
+        }
+
+        .filter-label {
+            color: white;
+            font-weight: 600;
+            font-size: 0.9rem;
+        }
+
+        .filter-select {
+            padding: 8px 15px;
+            border: none;
+            border-radius: 8px;
+            background: white;
+            color: #333;
+            font-family: 'Inter', sans-serif;
+            font-size: 0.95rem;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .filter-select:hover {
+            box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+        }
+
+        .filter-select:focus {
+            outline: none;
+            box-shadow: 0 5px 20px rgba(0,0,0,0.15);
+        }
+
         .tabs {
             display: flex;
             gap: 15px;
@@ -299,6 +345,25 @@
             <input type="text" class="search-input" id="searchInput" placeholder="🔍 Tìm kiếm bài hát...">
         </div>
 
+        <div class="filters-bar">
+            <div class="filter-group">
+                <span class="filter-label">Loại:</span>
+                <select class="filter-select" id="typeFilter">
+                    <option value="all">Tất cả</option>
+                    <option value="piano">Piano</option>
+                    <option value="midi">MIDI</option>
+                    <option value="chord">Chord</option>
+                </select>
+            </div>
+            <div class="filter-group">
+                <span class="filter-label">Sắp xếp:</span>
+                <select class="filter-select" id="sortFilter">
+                    <option value="name-asc">A → Z</option>
+                    <option value="name-desc">Z → A</option>
+                </select>
+            </div>
+        </div>
+
         <div class="tabs">
             <button class="tab active" data-category="all">Tất cả</button>
             <button class="tab" data-category="printed">Đã in</button>
@@ -312,7 +377,6 @@
     </div>
 
     <script>
-        // Dữ liệu được nhúng trực tiếp từ thư mục
         const songsData = {
         "not print": [
                 {
@@ -1256,8 +1320,9 @@
         
         let currentCategory = 'all';
         let searchQuery = '';
+        let typeFilter = 'all';
+        let sortOrder = 'name-asc';
 
-        // Update statistics
         function updateStats() {
             const totalSongs = (songsData['printed']?.length || 0) + (songsData['not print']?.length || 0);
             let totalFiles = 0;
@@ -1276,7 +1341,6 @@
             document.getElementById('totalFiles').textContent = totalFiles;
         }
 
-        // Render songs
         function renderSongs() {
             const grid = document.getElementById('songsGrid');
             const noResults = document.getElementById('noResults');
@@ -1296,6 +1360,27 @@
                 );
             }
 
+            // Filter by type
+            if (typeFilter !== 'all') {
+                songs = songs.filter(song => {
+                    return Object.values(song.difficulties).some(difficulty => {
+                        return Object.keys(difficulty).some(type => {
+                            if (typeFilter === 'piano') return type.toLowerCase() === 'piano';
+                            if (typeFilter === 'midi') return type.toLowerCase() === 'midi';
+                            if (typeFilter === 'chord') return type.toLowerCase().includes('chord');
+                            return false;
+                        });
+                    });
+                });
+            }
+
+            // Sort
+            if (sortOrder === 'name-asc') {
+                songs.sort((a, b) => a.name.localeCompare(b.name, 'vi'));
+            } else if (sortOrder === 'name-desc') {
+                songs.sort((a, b) => b.name.localeCompare(a.name, 'vi'));
+            }
+
             if (songs.length === 0) {
                 grid.style.display = 'none';
                 noResults.style.display = 'block';
@@ -1311,7 +1396,6 @@
             });
         }
 
-        // Create song card
         function createSongCard(song) {
             const card = document.createElement('div');
             card.className = 'song-card';
@@ -1364,7 +1448,18 @@
             renderSongs();
         });
 
-        // Initialize
+        // Type filter
+        document.getElementById('typeFilter').addEventListener('change', (e) => {
+            typeFilter = e.target.value;
+            renderSongs();
+        });
+
+        // Sort filter
+        document.getElementById('sortFilter').addEventListener('change', (e) => {
+            sortOrder = e.target.value;
+            renderSongs();
+        });
+
         updateStats();
         renderSongs();
     </script>
