Add diacritic-insensitive search for Vietnamese

--- a/index.html
+++ b/index.html
@@ -1340,6 +1340,15 @@
         };
         let searchQuery = '';
 
+        // Function to remove Vietnamese diacritics
+        function removeDiacritics(str) {
+            return str.normalize('NFD')
+                .replace(/[̀-ͯ]/g, '')
+                .replace(/đ/g, 'd')
+                .replace(/Đ/g, 'D')
+                .toLowerCase();
+        }
+
         function updateStats() {
             const totalSongs = (songsData['printed']?.length || 0) + (songsData['not print']?.length || 0);
             let totalFiles = 0;
@@ -1374,8 +1383,9 @@
 
             // Filter by search
             if (searchQuery) {
+                const normalizedQuery = removeDiacritics(searchQuery);
                 songs = songs.filter(song => 
-                    song.name.toLowerCase().includes(searchQuery.toLowerCase())
+                    removeDiacritics(song.name).includes(normalizedQuery)
                 );
             }
 
